--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
-Package: citesperu
+Package: ffperu
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Paul Efren",
+           family = "Santos Andrade",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
+           email = "paulefrens@gmail.com",
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
 License: MIT + file LICENSE
@@ -18,3 +18,5 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 URL: https://github.com/PaulESantos/citesperu
 BugReports: https://github.com/PaulESantos/citesperu/issues
+Imports: 
+    lifecycle
